<resources>
    <string name="app_name">Media Rumo</string>
    <string name="hit_nome">Nome</string>
    <string name="hit_senha">Senha</string>
    <string name="hit_senha_conf">Repita a senha</string>
    <string name="hit_ja_tem_conta">Já tem uma conta? Entra aqui</string>
    <string name="hit_btn_entrar">ENTRAR</string>
    <string name="hit_btn_entrar_email">E-mail</string>
    <string name="hit_cod"> * </string>
    <string name="hit_btn_receber_cod">Receber Código</string>
    <string name="hit_btn_enviar_cod">Enviar Código</string>
    <string name="hit_btn_num_telef">Num.Telefone</string>
    <string name="hit_btn_esqueceu_senha">Esqueci-me da senha</string>
    <string name="hit_btn_registrar">REGISTRAR</string>
    <string name="hit_btn_registrate">NÃO TEM UMA CONTA ? REGISTA-SE AQUI</string>
    <string name="hit_recuperar_senha">Redifinir Senha</string>
    <string name="hit_receber_cod_confirmacao">Como deseja receber o código de confirmação?</string>
    <string name="hit_redif_senha">Insira o seu e-mail para redifinir a sua senha</string>
    <string name="hit_redif_senha_telef">Insira o seu nº do telefone para redifinir a sua senha</string>
    <string name="hit_redif_telef">Insira o seu número do telefone</string>
    <string name="hit_redif_cod">Insira o Seu Código de Confirmação</string>
    <string name="hit_receber_denovo">Não Recebeu o código ?</string>
    <string name="hit_email_enviado">Enviamos o código de confirmação para </string>
    <string name="hit_nova_senha">Senha Nova</string>
    <string name="hit_conf_senha">Confirmar Senha</string>
    <string name="hit_senha_antiga">Senha Antiga</string>
    <string name="hit_vazio" />
    <string name="navigation_drawer_abre"> </string>
    <string name="lbl_view_cart">VIEW CART</string>
    <string name="cart_info_bar_data">%d Items | Kz%s</string>
    <string name="lbl_item_price_quantity">%s x %d</string>
    <string name="price_with_currency">Kz%.2f</string>
    <string name="btn_checkout">CHECKOUT (%s)</string>
    <string name="txtPerfil">Meu Perfil </string>
    <string name="txtInfo">Informações </string>
    <string name="txtTelefE">Telefone</string>
    <string name="txtTelef_rec">Nº Telefone</string>
    <string name="txtTelef">Telefone - </string>
    <string name="txtProvinciaE">Cidade</string>
    <string name="txtProvincia">Cidade - </string>
    <string name="txtMunicipioE">Municipio</string>
    <string name="txtMunicipio">Municipio - </string>
    <string name="txtBairroE">Bairro</string>
    <string name="cancelar">Cancelar</string>
    <string name="txtBairro">Bairro - </string>
    <string name="txtRuaE">Rua</string>
    <string name="txtRua">Rua - </string>
    <string name="txtGeneroE">Gênero</string>
    <string name="txtMsg">A rede 3G ou WI-FI não possui tranferência de dados.</string>
    <string name="txtMsgErroRede">O dispositivo não está conectado a nenhuma rede 3G ou WI-FI .</string>
    <string name="txtMsgCondConf">Insira o código de confirmação.</string>
    <string name="txtMsgCondConfCod">Termina de inserir o código.</string>
    <string name="txtMsgDadosUser">Não foi possivel ter acesso a alguns dados do usuário.</string>
    <string name="txtSenhaalterada">A sua senha foi alterada com sucesso.!</string>
    <string name="txtTerminarEditPerfil">Por favor termina de editar o perfil.</string>
    <string name="txtFotoAtualizada">Foto atualizada com sucesso.!.</string>
    <string name="txtTentarmaistarde">Tentar mais tarde.</string>
    <string name="txtCodigoenviado">O código foi reenviado.</string>
    <string name="txtProblemaMsg">Algum problema aconteceu.Relata o problema.</string>
    <string name="txtTimeout">O tempo de comunicação excedeu. Possivelvente a internet está lenta.</string>
    <string name="txtEfetuadoregistro">Registro efetuado com sucesso</string>
    <string name="txtVoltar">Voltar</string>
    <string name="txtTentarNovamente">Tentar de Novo</string>
    <string name="imageView">Imagem</string>
    <string name="txtGenero">Gênero - </string>
    <string name="txtDataNascE">Data Nascimento</string>
    <string name="txtDataNasc">Data Nascimento - </string>
    <string name="hit_btn_salvar_dados">Salvar Dados</string>
    <string name="dialogo_escolher_foto_titulo">Escolher Fotografía do Perfil</string>
    <string name="dialogo_escolher_foto_opc_camera">Câmera</string>
    <string name="dialogo_escolher_foto_opc_galeria">Galeria</string>
    <string name="mensagem_imagem_intent_nula">A opção de selecionar a imagens está em falta!</string>
    <string name="trocar_img">Trocar imagem de perfil</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="tirar_galeria">Escolher foto da galeria</string>
    <string name="dialog_titulo">Conceder permissões</string>
    <string name="ir_para_config">Vá para as Configurações</string>
    <string name="dialog_permissao">
Este aplicativo precisa de permissão para usar esse recurso. Você pode concedê-los nas configurações do aplicativo.</string>
    <string name="ocorreuErro">Ocorreu um erro de conexão</string>
    <string name="hit_atualizar_senha">Atualizar Senha</string>
    <string-array name="genero">
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>
    <string-array name="cidade">
        <item>Luanda</item>
        <item>Bengo</item>
        <item>Benguela</item>
        <item>Bié</item>
        <item>Cabinda</item>
        <item>Cuando-Cubango</item>
        <item>Cuanza Norte</item>
        <item>Cuanza Sul</item>
        <item>Cunene</item>
        <item>Huambo</item>
        <item>Huíla</item>
        <item>Lunda Norte</item>
        <item>Lunda Sul</item>
        <item>Malanje</item>
        <item>Moxico</item>
        <item>Namibe</item>
        <item>Uíge</item>
        <item>Zaire</item>
    </string-array>


    <!--valores quiz-->
    <string name="exemplo_usuario">Usuario</string>
    <string name="exemplo_senha">Senha</string>
    <string name="exemplo_email">Email</string>
    <string name="exemplo_registrese">Registre-se</string>
    <string name="exemplo_entrar">Entrar</string>
    <string name="exemplo_categoria">Categorias</string>
    <string name="exemplo_categoria_titulo">Categoria</string>
    <string name="exemplo_jogar">Jogar</string>
    <string name="exemplo_ranking">Classificação</string>
    <string name="exemplo_usuario_">bacar</string>
    <string name="exemplo_senha_">123456</string>
    <string name="exemplo_pontuacao">0</string>
    <string name="exemplo_perguntas">1/30</string>
    <string name="exemplo_pergunta_a">Answer A</string>
    <string name="exemplo_pergunta_b">Answer B</string>
    <string name="exemplo_pergunta_c">Answer C</string>
    <string name="exemplo_pergunta_d">Answer D</string>
    <string name="exemplo_pontuacao_">Pontuação : 0</string>
    <string name="exemplo_perguntas_certas">Perg. Certas : 0/30</string>
    <string name="exemplo_tentar_denovo">Tentar de Novo</string>
    <string name="exemplo_nome">Jogador</string>
    <string name="exemplo_lugar">Lugar</string>
    <string name="exemplo_categoria_nome">Categoria</string>
    <string name="exemplo_pontuacao_desc">Pontuação</string>
    <string name="exemplo_pontos">Pontos</string>
    <string name="txt_direitos">Copyright © 2019 Pro-it Consulting</string>
    <!--CHAVES ADMOB-->
    <string name="admob_app_id">ca-app-pub-6092038717578928~2803129299</string>
    <string name="admob_banner_ad">ca-app-pub-6092038717578928/7013837040</string>
</resources>
