<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="10dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/txt_cor_redif"
            android:text="@string/hit_recuperar_senha"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_cor_redif"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hit_receber_cod_confirmacao"
            android:textSize="@dimen/txtTamanho"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/borda_arredondada"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_btn_email_redif"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_marginRight="5dp"
                android:text="@string/hit_btn_entrar_email"
                android:textColor="@android:color/white"
                android:background="@drawable/borda_arredondada_login"
                android:layout_height="44dp"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/dialog_btn_telef_redif"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_marginLeft="5dp"
                android:text="@string/hit_btn_num_telef"
                android:textColor="@android:color/white"
                android:background="@drawable/borda_arredondada_login"
                android:layout_height="44dp"
                android:layout_marginStart="5dp" />

        </LinearLayout>

    </LinearLayout>