<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="10dp"
    android:gravity="center"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/linearLayoutopc_redif_senha"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/cor_borda"
            android:text="@string/hit_recuperar_senha"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/cor_borda"
            android:text="@string/hit_redif_senha"
            android:textSize="@dimen/txtTamanho"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditTextTheme"
                android:id="@+id/hint_email">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/dialog_editEmail_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hit_btn_entrar_email"
                    android:inputType="textCapSentences"
                    android:theme="@style/MyEditTextTheme"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_btn_cancelar_enviar_email"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_marginRight="5dp"
                android:textSize="12sp"
                android:gravity="center"
                android:padding="5dp"
                android:layout_gravity="center"
                android:text="@string/cancelar"
                android:textColor="@color/cor_borda"
                android:background="@drawable/borda_arredondada_login"
                android:layout_height="44dp"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/dialog_btn_email_redif_enviar_email"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:textSize="12sp"
                android:gravity="center"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:text="@string/hit_btn_receber_cod"
                android:textColor="@color/cor_borda"
                android:background="@drawable/borda_arredondada_login"
                android:layout_height="44dp"
                android:layout_marginEnd="5dp" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/activity_sem_internet" />

</RelativeLayout>