<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="16dp"
    android:id="@+id/cardViewScore"
    android:layout_margin="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/linearLayoutItens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_lugar"
            android:text="@string/exemplo_lugar"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/txt_name"
            android:text="@string/exemplo_nome"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10dp"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/txt_score"
            android:text="@string/exemplo_pontos"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:contentDescription="@string/imageView"
            android:id="@+id/trofeu_ouro"
            android:visibility="gone"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_primeiro_lugar"/>

        <ImageView
            android:contentDescription="@string/imageView"
            android:id="@+id/trofeu_prata"
            android:visibility="gone"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_segundo_lugar" />

        <ImageView
            android:contentDescription="@string/imageView"
            android:id="@+id/trofeu_bronze"
            android:visibility="gone"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_terceiro_lugar"/>


    </LinearLayout>

</android.support.v7.widget.CardView>