<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".QUIZ.Playing">

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_above="@+id/rel_perguntas"
       android:layout_height="match_parent">

       <ImageView
           android:id="@+id/question_image"
           android:layout_marginTop="25dp"
           android:visibility="gone"
           android:gravity="center"
           android:layout_width="300dp"
           android:layout_height="200dp" />

       <TextView
           android:id="@+id/question_text"
           android:visibility="invisible"
           android:textSize="20sp"
           android:layout_gravity="center"
           android:textColor="@android:color/white"
           android:layout_marginTop="25dp"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

   </LinearLayout>

    <RelativeLayout
        android:id="@+id/rel_perguntas"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:paddingTop="20dp"
        android:background="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

       <LinearLayout
           android:orientation="vertical"
           android:id="@+id/group"
           android:paddingTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:weightSum="2"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:id="@+id/txtScore"
                   android:textColor="@android:color/white"
                   android:gravity="center_horizontal"
                   android:text="@string/exemplo_pontuacao"
                   android:textSize="36sp"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content" />

               <TextView
                   android:id="@+id/txtTotalQuestion"
                   android:textColor="@android:color/white"
                   android:gravity="center_horizontal"
                   android:text="@string/exemplo_perguntas"
                   android:textSize="36sp"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content" />

           </LinearLayout>

           <ProgressBar
               android:id="@+id/progressBar"
               style="@style/Widget.AppCompat.ProgressBar.Horizontal"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="8dp"
               android:max="15"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <Button
               android:id="@+id/btnAnswerA"
               android:text="@string/exemplo_pergunta_a"
               android:textStyle="bold"
               android:theme="@style/MyButton"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:background="@color/cor_principal"
               android:layout_margin="8dp"
               android:foreground="?android:attr/selectableItemBackground"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <Button
               android:id="@+id/btnAnswerB"
               android:text="@string/exemplo_pergunta_b"
               android:textStyle="bold"
               android:theme="@style/MyButton"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:background="@color/cor_principal"
               android:layout_margin="8dp"
               android:foreground="?android:attr/selectableItemBackground"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <Button
               android:id="@+id/btnAnswerC"
               android:text="@string/exemplo_pergunta_c"
               android:textStyle="bold"
               android:theme="@style/MyButton"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:background="@color/cor_principal"
               android:layout_margin="8dp"
               android:foreground="?android:attr/selectableItemBackground"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <Button
               android:id="@+id/btnAnswerD"
               android:text="@string/exemplo_pergunta_d"
               android:textStyle="bold"
               android:theme="@style/MyButton"
               style="@style/Widget.AppCompat.Button.Borderless"
               android:background="@color/cor_principal"
               android:layout_margin="8dp"
               android:foreground="?android:attr/selectableItemBackground"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />


       </LinearLayout>

    </RelativeLayout>


</RelativeLayout>