<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".QUIZ.RankingFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/title"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardElevation="4dp">

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/exemplo_lugar"
                android:textSize="20sp"
                android:visibility="gone"
                android:textColor="@android:color/white"
                android:layout_weight="2"
                android:layout_marginLeft="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/exemplo_nome"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_weight="5"
                android:layout_marginLeft="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/exemplo_pontos"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_weight="3"
                android:layout_marginRight="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_quiz_ranking"
        android:layout_width="wrap_content"
        android:theme="@style/progressDourada"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_height="wrap_content" />

  <android.support.v4.widget.SwipeRefreshLayout
      android:id="@+id/swiperefreshRanking"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <android.support.v7.widget.RecyclerView
          android:id="@+id/rankingList"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

      </android.support.v7.widget.RecyclerView>

  </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>